l10n: Updated Russian (ru) translation to 27%
New status: 82 messages complete with 90 fuzzies and 128 untranslated.

Transmitted-via: Transifex (translations.xfce.org).

--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-02-18 21:02+0100\n"
+"POT-Creation-Date: 2010-02-19 00:00+0100\n"
 "PO-Revision-Date: 2009-05-09 17:16+0400\n"
 "Last-Translator: Denis Koryavov <dkoryavov@yandex.ru>\n"
 "Language-Team: Russian\n"
@@ -428,7 +428,7 @@ msgstr "_Название: "
 
 #: ../panel/panel-preferences-dialog.glade.h:34
 msgid "_Lock panel"
-msgstr ""
+msgstr "_Закрепить панель"
 
 #: ../panel/panel-preferences-dialog.glade.h:35
 msgid "_Orientation:"
@@ -468,7 +468,7 @@ msgstr ""
 
 #: ../plugins/actions/actions.c:110
 msgid "Log Out"
-msgstr ""
+msgstr "Завершение сеанса"
 
 #: ../plugins/actions/actions.c:111
 #, fuzzy
@@ -477,11 +477,11 @@ msgstr "Заблокировать экран "
 
 #: ../plugins/actions/actions.c:112
 msgid "Shut Down"
-msgstr ""
+msgstr "Выключить компьютер"
 
 #: ../plugins/actions/actions.c:113
 msgid "Restart"
-msgstr "Перезапустить "
+msgstr "Перезагрузка"
 
 #: ../plugins/actions/actions.c:114
 msgid "Suspend"
@@ -582,18 +582,18 @@ msgstr "Панель Xfce "
 msgid "Select An Icon"
 msgstr "Выберите значок для \"%s\" "
 
-#: ../plugins/applicationsmenu/applicationsmenu.c:673
+#: ../plugins/applicationsmenu/applicationsmenu.c:670
 #: ../plugins/launcher/launcher.c:2099
 #, fuzzy, c-format
 msgid "Failed to execute command \"%s\"."
 msgstr "Не удалось запустить \"%s\" "
 
-#: ../plugins/applicationsmenu/applicationsmenu.c:813
+#: ../plugins/applicationsmenu/applicationsmenu.c:810
 #, fuzzy
 msgid "No applications found"
 msgstr "Выберите значок для \"%s\" "
 
-#: ../plugins/applicationsmenu/applicationsmenu.c:825
+#: ../plugins/applicationsmenu/applicationsmenu.c:822
 #, fuzzy
 msgid "Failed to load the applications menu"
 msgstr "Не удалось запустить \"%s\" "
@@ -1186,11 +1186,11 @@ msgstr "Прозрачность (%): "
 
 #: ../plugins/separator/separator-dialog.glade.h:7
 msgid "_Expand"
-msgstr ""
+msgstr "_Развернуть"
 
 #: ../plugins/separator/separator-dialog.glade.h:8
 msgid "_Style:"
-msgstr ""
+msgstr "_Стиль:"
 
 #: ../plugins/separator/separator.desktop.in.h:1
 #, fuzzy
@@ -1203,7 +1203,6 @@ msgid "Restore the minimized windows"
 msgstr "Восстановить свёрнутые окна "
 
 #: ../plugins/showdesktop/showdesktop.c:194
-#, fuzzy
 msgid "Minimize all open windows and show the desktop"
 msgstr "Скрыть окна и показать рабочий стол "
 
@@ -1221,9 +1220,8 @@ msgid "C_lear Known Applications"
 msgstr "Выберите приложение "
 
 #: ../plugins/systray/systray-dialog.glade.h:3
-#, fuzzy
 msgid "Known Applications"
-msgstr "Скрытые приложения "
+msgstr "Известные приложения "
 
 #: ../plugins/systray/systray-dialog.glade.h:4
 #: ../plugins/systray/systray.desktop.in.h:2
